--- a/typst.toml
+++ b/typst.toml
@@ -3,12 +3,12 @@ name = "orest-tokovenko-resume"
 version = "0.1.0"
 entrypoint = "src/lib.typ"
 authors = ["Orest Tokovenko <www.oresttokovenko.com>"]
-license = "Unlicense"
+license = "MIT"
 description = "Orest Tokovenko's Resume"
 repository = "https://github.com/oresttokovenko/orest-tokovenko-resume"
 exclude = [
 	".github",
 	"tests",
 	".typstignore",
-	"Justfile",
+	"justfile",
 ]
