--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,3 +20,10 @@ jobs:
 
       - name: Compile test-company-primary
         run: typst compile tests/src/test-company-primary.typ tests/pdf/test-company-primary.pdf --root .
+
+      - name: Verify text extraction
+        run: |
+          pdftotext tests/pdf/test-job-title-primary.pdf - | grep -q "John Smith"
+          pdftotext tests/pdf/test-job-title-primary.pdf - | grep -q "johnsmith@example.com"
+          pdftotext tests/pdf/test-company-primary.pdf - | grep -q "John Smith"
+          pdftotext tests/pdf/test-company-primary.pdf - | grep -q "johnsmith@example.com"
