chore: update readme

--- a/typst.toml
+++ b/typst.toml
@@ -5,6 +5,7 @@ entrypoint = "src/lib.typ"
 authors = ["Orest Tokovenko <www.oresttokovenko.com>"]
 license = "MIT"
 description = "A modern, minimal resume template for tech professionals"
+compiler = "0.14.0"
 repository = "https://github.com/oresttokovenko/git-hired"
 exclude = [
 	".github",
