--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,12 +14,14 @@ jobs:
 
       - name: Install Typst
         uses: typst-community/setup-typst@v4
+        with:
+          typst-version: "0.14.0"
 
       - name: Compile test-job-title-primary
-        run: typst compile tests/src/test-job-title-primary.typ tests/pdf/test-job-title-primary.pdf --root .
+        run: typst compile tests/src/test-job-title-primary.typ tests/pdf/test-job-title-primary.pdf --root . --pdf-standard a-2u
 
       - name: Compile test-company-primary
-        run: typst compile tests/src/test-company-primary.typ tests/pdf/test-company-primary.pdf --root .
+        run: typst compile tests/src/test-company-primary.typ tests/pdf/test-company-primary.pdf --root . --pdf-standard a-2u
 
       - name: Verify text extraction
         run: |
